--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.buttons-all{
+    border-radius: 25px !important;
+    border: none;
+    height: 40px !important;
+    background-color: #1a788b !important;
+    color: white !important;
+    font-size: 14px !important;
+    min-width: 150px !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    cursor: pointer;
+    
+}
+
+.buttons-cancel {
+    border-radius: 25px !important;
+    border: none;
+    height: 40px !important;
+    background-color: white !important;
+    color: rgb(198, 20, 20) !important;
+    font-size: 14px !important;
+    min-width: 150px !important;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    cursor: pointer;
+    }
